--- a/lab15/lab15_ethics-preparation.Rmd
+++ b/lab15/lab15_ethics-preparation.Rmd
@@ -105,23 +105,40 @@ Please complete this very brief [Google form](https://forms.gle/zuTR9QR6kNKvmFLc
 
 ## <!-- 1.1 -->In Buolamwini's facial recognition example, there seems to be a straightforward solution: expand the training set to include diverse individuals. What factors do you think have prevented this "straightforward solution" to being implemented more readily?
 
-
+It is hard to know for sure. Perhaps it is a matter of diverse individuals studying
+these fields of STEM or other things. There is data that shows people of color
+tend to study more humanities fields. Perhaps its who is getting hired into these
+companies. 
 
 ## <!-- 1.2 -->Do you think there is an analogous solution to the bias present in the predictive policing and recidivism algorithms? Why or why not? 
 
+The fact that humans create the algorithms and code, all of those biases, 
+lived experiences, and systemic issues will also fuel the AI's decision making. 
 
 
 ## <!-- 1.3 -->In the CNBC video, McDonald states that "[Data and algorithms] are always going to be a more effective, more fair, and more just means of directing patrol officers than relying on their intuition or their hunches". In what ways is using data and algorithms in this context more effective and more fair? In what ways is using data and algorithms in this context less effective and less fair? (Consider how you are defining effective and fair.)
 
+I see something very dangerous in sciencizing things to legitimize decisions. 
+There are far too many instances of scientific racism amongst black and indigenous
+communities that I fail to see something positive emerging from the statement that 
+"data and algorithms are always going to be more effective and fair."
 
 
 ## <!-- 1.4 -->In Farid's TedX talk, Farid argues that biased decisions based on computer algorithms are worse than biased human decisions. Why? What are his justifications for that claim?
 
+Recap:
+- complex risk assessment and random people on twitter predicted at the same accuracy
+- was basing these things off of age and prior incarceration
+  - blacks much much more likely to be incarcerated than white counterparts
+- humans have simple mind: young and doing crime -> likely to do it again
+  - but if old and not much crime then probably not
+  
+It is dangerous the weight that we put into these systems. 
 
 
 ## <!-- 1.5 -->Both humans and algorithms are flawed. Which do you think is "worse" in this context? What about if the algorithm was going to determine whether or not you get into graduate school? Or whether or not you get the next job or summer internship that you apply to?
 
-
+Algorithms remove the blame from the human. 
 
 <!-- Option 2 ----------------------------------------------------------------->
 # <!-- OPTION 2 -->**Predicting Financial Risk** {#finance}
