--- a/lab15/lab15_ethics.Rmd
+++ b/lab15/lab15_ethics.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 15: Ethics discussion"
-author: "Solutions"
+author: "Kauila Tengan"
 date: "November 11, 2021"
 urlcolor: blue
 linkcolor: blue
